resolved issue of not keeping answer after first evaluation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="subtract operator buttons">-</div>
         <div class="multiply operator buttons">x</div>
         <div class="divide operator buttons">/</div>
-        <div class="equal operator buttons">=</div>
+        <div class="equal buttons">=</div>
       </div>
     </div>
     <script src="index.js"></script>
